dataset1235/2025-2/2868285114/users/1760111885/executions/3649835072_2819779400.log
== SUBMISSION (2025-08-19 23:20:48)
-- CODE: 
quantidade = float(input("quantidade"))
valorUnitario = float(input("valorUnitario"))
frete = float(input("frete"))

total = (quantidade* valorUnitario)+ frete

print(total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
quantidadevalorUnitariofrete1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
quantidadevalorUnitariofrete240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
quantidadevalorUnitariofrete540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
quantidadevalorUnitariofrete765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
quantidadevalorUnitariofrete162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
quantidadevalorUnitariofrete618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 23:20:07)
-- CODE: 
quantidade =float(input("quantidade"))
valorUnitario = float(input("valorUnitario"))
frete = float(input("frete"))

total = (QUANTIADE * valorUnitario)+ frete

print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (QUANTIADE * valorUnitario)+ frete
             ^^^^^^^^^
NameError: name 'QUANTIADE' is not defined
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (QUANTIADE * valorUnitario)+ frete
             ^^^^^^^^^
NameError: name 'QUANTIADE' is not defined
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (QUANTIADE * valorUnitario)+ frete
             ^^^^^^^^^
NameError: name 'QUANTIADE' is not defined
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (QUANTIADE * valorUnitario)+ frete
             ^^^^^^^^^
NameError: name 'QUANTIADE' is not defined
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (QUANTIADE * valorUnitario)+ frete
             ^^^^^^^^^
NameError: name 'QUANTIADE' is not defined
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (QUANTIADE * valorUnitario)+ frete
             ^^^^^^^^^
NameError: name 'QUANTIADE' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 23:20:17)
-- CODE: 
quantidade = float(input("quantidade"))
valorUnitario = float(input("valorUnitario"))
frete = float(input("frete"))

total = (QUANTIADE * valorUnitario)+ frete

print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (QUANTIADE * valorUnitario)+ frete
             ^^^^^^^^^
NameError: name 'QUANTIADE' is not defined
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (QUANTIADE * valorUnitario)+ frete
             ^^^^^^^^^
NameError: name 'QUANTIADE' is not defined
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (QUANTIADE * valorUnitario)+ frete
             ^^^^^^^^^
NameError: name 'QUANTIADE' is not defined
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (QUANTIADE * valorUnitario)+ frete
             ^^^^^^^^^
NameError: name 'QUANTIADE' is not defined
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (QUANTIADE * valorUnitario)+ frete
             ^^^^^^^^^
NameError: name 'QUANTIADE' is not defined
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (QUANTIADE * valorUnitario)+ frete
             ^^^^^^^^^
NameError: name 'QUANTIADE' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 23:20:18)
-- CODE: 
quantidade = float(input("quantidade"))
valorUnitario = float(input("valorUnitario"))
frete = float(input("frete"))

total = (QUANTIADE * valorUnitario)+ frete

print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (QUANTIADE * valorUnitario)+ frete
             ^^^^^^^^^
NameError: name 'QUANTIADE' is not defined
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (QUANTIADE * valorUnitario)+ frete
             ^^^^^^^^^
NameError: name 'QUANTIADE' is not defined
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (QUANTIADE * valorUnitario)+ frete
             ^^^^^^^^^
NameError: name 'QUANTIADE' is not defined
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (QUANTIADE * valorUnitario)+ frete
             ^^^^^^^^^
NameError: name 'QUANTIADE' is not defined
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (QUANTIADE * valorUnitario)+ frete
             ^^^^^^^^^
NameError: name 'QUANTIADE' is not defined
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = (QUANTIADE * valorUnitario)+ frete
             ^^^^^^^^^
NameError: name 'QUANTIADE' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
